==> 1994timmeh/NucleoESP8266WSN/csse4011-project/np2/src/boards/netduinoplus2/enc28j60/enc28j60_lowlevel.c <==
#include "arch/cc.h"
#include "lwipopts.h"
#include "enc28j60_lowlevel.h"
#include "enc28j60def.h"
#include "board.h"
#include "stm32f4xx_hal_conf.h"
#include "debug_printf.h"
	#define ENC_SPI					BRD_SPI						//External SPI
	#define ENC_SPI_CLK				BRD_SPI_CLK
	#define ENC_SPI_SCK_GPIO_CLK	BRD_SPI_SCK_GPIO_CLK		//GPIO SPI SCK Clock
	#define ENC_SPI_MISO_GPIO_CLK	BRD_SPI_MISO_GPIO_CLK		//GPIO SPI SCK Clock
	#define ENC_SPI_CS_GPIO_CLK		BRD_D8_GPIO_CLK
	#define ENC_SPI_SCK_PIN			BRD_SPI_SCK_PIN
	#define ENC_SPI_SCK_GPIO_PORT	BRD_SPI_SCK_GPIO_PORT
	#define ENC_SPI_SCK_AF			BRD_SPI_SCK_AF
	#define ENC_SPI_MISO_PIN		BRD_SPI_MISO_PIN
  	#define ENC_SPI_MISO_GPIO_PORT	BRD_SPI_MISO_GPIO_PORT
	#define ENC_SPI_MISO_AF			BRD_SPI_MISO_AF
	#define ENC_SPI_MOSI_PIN		BRD_SPI_MOSI_PIN
  	#define ENC_SPI_MOSI_GPIO_PORT	BRD_SPI_MOSI_GPIO_PORT
	#define ENC_SPI_MOSI_AF			BRD_SPI_MOSI_AF
	#define ENC_SPI_CS_PIN			BRD_D8_PIN
  	#define ENC_SPI_CS_GPIO_PORT	BRD_D8_GPIO_PORT
	#define ENC_SPI					BRD_ENC_SPI						//onboard ethernet SPI
	#define ENC_SPI_CLK				BRD_ENC_SPI_CLK
	#define __ENC_SPI_SCK_GPIO_CLK()	__BRD_ENC_SPI_SCK_GPIO_CLK()		//GPIO SPI SCK Clock
	#define __ENC_SPI_MISO_GPIO_CLK()	__BRD_ENC_SPI_MISO_GPIO_CLK()		//GPIO SPI SCK Clock
	#define __ENC_SPI_CS_GPIO_CLK()		__BRD_ENC_SPI_CS_GPIO_CLK()
	#define ENC_SPI_SCK_PIN			BRD_ENC_SPI_SCK_PIN
	#define ENC_SPI_SCK_GPIO_PORT	BRD_ENC_SPI_SCK_GPIO_PORT
	#define ENC_SPI_SCK_AF			BRD_ENC_SPI_SCK_AF
	#define ENC_SPI_MISO_PIN		BRD_ENC_SPI_MISO_PIN

u8_t enc_sendbyte(unsigned char txbyte) {

	u8_t rxbyte;

#ifdef DEBUG
	debug_printf("ENCSPI DEBUG: sendbyte: T-");
#endif		

	HAL_SPI_TransmitReceive(&SpiHandle, &txbyte, &rxbyte, 1, 1);	


	DelayUs(100);
	DelayUs(300);
	DelayUs(100);
	
#ifdef DEBUG
	//debug_printf("%X R-%X\n\r", txbyte, rxbyte);
#endif		

	return rxbyte;
}

void enc28j60Init(u8_t *eth_addr,u8_t DuplexState)
{
	// initialize I/O
	  
#ifdef DEBUG
	debug_printf("ENCSPI DEBUG: Enc28j60Init %2X-%2X-%2X-%2X-%2X-%2X \n\r", eth_addr[0], eth_addr[1], eth_addr[2], eth_addr[3], eth_addr[4], eth_addr[5]);
#endif
	
/* Enable SCK, MOSI and MISO GPIO clocks */
	__BRD_ENC_SPI_CLK();
	__BRD_ENC_SPI_SCK_GPIO_CLK();
	__BRD_ENC_SPI_MISO_GPIO_CLK();
	__BRD_ENC_SPI_MOSI_GPIO_CLK();
	__BRD_ENC_SPI_CS_GPIO_CLK();

	/* SPI SCK pin configuration */	
	GPIO_InitStructure.Pin = BRD_ENC_SPI_SCK_PIN;
  	GPIO_InitStructure.Mode = GPIO_MODE_AF_PP;
  	GPIO_InitStructure.Speed = GPIO_SPEED_HIGH;
	GPIO_InitStructure.Pull = GPIO_PULLDOWN;
	GPIO_InitStructure.Alternate = BRD_ENC_SPI_SCK_AF;
  	HAL_GPIO_Init(BRD_ENC_SPI_SCK_GPIO_PORT, &GPIO_InitStructure);

  	/* SPI MISO pin configuration */
	GPIO_InitStructure.Pin = BRD_ENC_SPI_MISO_PIN;
  	GPIO_InitStructure.Mode = GPIO_MODE_AF_PP;
  	GPIO_InitStructure.Speed = GPIO_SPEED_HIGH;
	GPIO_InitStructure.Pull = GPIO_PULLUP;
	GPIO_InitStructure.Alternate = BRD_ENC_SPI_SCK_AF;
  	HAL_GPIO_Init(BRD_ENC_SPI_MISO_GPIO_PORT, &GPIO_InitStructure);
	

	/* SPI  MOSI pin configuration */
	GPIO_InitStructure.Pin = BRD_ENC_SPI_MOSI_PIN;
  	GPIO_InitStructure.Mode = GPIO_MODE_AF_PP;
  	GPIO_InitStructure.Speed = GPIO_SPEED_HIGH;
	GPIO_InitStructure.Pull = GPIO_PULLDOWN;
	GPIO_InitStructure.Alternate = BRD_ENC_SPI_MOSI_AF;
  	HAL_GPIO_Init(BRD_ENC_SPI_MOSI_GPIO_PORT, &GPIO_InitStructure);

  	/* SPI configuration -------------------------------------------------------*/
  	SpiHandle.Instance = (SPI_TypeDef *)(BRD_ENC_SPI);

	 __HAL_SPI_DISABLE(&SpiHandle);

    SpiHandle.Init.Mode              = SPI_MODE_MASTER;
    SpiHandle.Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_4; //64; //56;
    SpiHandle.Init.Direction         = SPI_DIRECTION_2LINES;
    SpiHandle.Init.CLKPhase          = SPI_PHASE_1EDGE;
    SpiHandle.Init.CLKPolarity       = SPI_POLARITY_LOW;
    SpiHandle.Init.CRCCalculation    = SPI_CRCCALCULATION_DISABLED;
    SpiHandle.Init.CRCPolynomial     = 0; //7;
    SpiHandle.Init.DataSize          = SPI_DATASIZE_8BIT;
    SpiHandle.Init.FirstBit          = SPI_FIRSTBIT_MSB;
    SpiHandle.Init.NSS               = SPI_NSS_SOFT;
    SpiHandle.Init.TIMode            = SPI_TIMODE_DISABLED;

    HAL_SPI_Init(&SpiHandle);

   __HAL_SPI_ENABLE(&SpiHandle);

  	/* Configure GPIO PIN for Enc Chip select */
	GPIO_InitStructure.Pin = BRD_ENC_SPI_CS_PIN;
  	GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
  	GPIO_InitStructure.Speed = GPIO_SPEED_HIGH;
	GPIO_InitStructure.Pull = GPIO_PULLDOWN;
  	HAL_GPIO_Init(BRD_ENC_SPI_CS_GPIO_PORT, &GPIO_InitStructure);
  	
  	/* Deselect : Chip Select high */
	HAL_GPIO_WritePin(BRD_ENC_SPI_CS_GPIO_PORT, BRD_ENC_SPI_CS_PIN, GPIO_PIN_SET);
	
	/* Configure GPIO PIN for Power */
	GPIO_InitStructure.Pin = BRD_ENC_PWR_PIN;
  	GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
  	GPIO_InitStructure.Speed = GPIO_SPEED_HIGH;
	GPIO_InitStructure.Pull = GPIO_PULLUP;
  	HAL_GPIO_Init(BRD_ENC_PWR_GPIO_PORT, &GPIO_InitStructure);
  	
  	
	/* Turn Power off and on */	
	HAL_GPIO_WritePin(BRD_ENC_PWR_GPIO_PORT, BRD_ENC_PWR_PIN, GPIO_PIN_RESET);	

	/* Configure GPIO PIN for Reset */
	GPIO_InitStructure.Pin = BRD_ENC_RST_PIN;
  	GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
  	GPIO_InitStructure.Speed = GPIO_SPEED_HIGH;
	GPIO_InitStructure.Pull = GPIO_PULLUP;
  	HAL_GPIO_Init(BRD_ENC_RST_GPIO_PORT, &GPIO_InitStructure);
  	
	/* Turn Reset on */	
	HAL_GPIO_WritePin(BRD_ENC_RST_GPIO_PORT, BRD_ENC_RST_PIN, GPIO_PIN_RESET);	
	DelayUs(100);	
	HAL_GPIO_WritePin(BRD_ENC_RST_GPIO_PORT, BRD_ENC_RST_PIN, GPIO_PIN_SET);
	
  	DelayUs(100);  	


  enc28j60SoftwareReset();
  
	// do bank 0 stuff
	// initialize receive buffer
	// 16-bit transfers, must write low byte first
	// set receive buffer start address
	NextPacketPtr = ENC28J60_RXSTART_INIT;
    
	enc28j60Write16(ERXSTL, ENC28J60_RXSTART_INIT);
	// set receive pointer address
	enc28j60Write16(ERXRDPTL, ENC28J60_RXSTART_INIT);
	// set receive buffer end
	enc28j60Write16(ERXNDL, ENC28J60_RXSTOP_INIT);
	// set transmit buffer start
	enc28j60Write16(ETXSTL, ENC28J60_TXSTART_INIT);
  
  // allow Unicast to US and Broad cast packets with correct CRC
  enc28j60Write(ERXFCON, ERXFCON_CRCEN|ERXFCON_UCEN|ERXFCON_BCEN);//ERXFCON_UCEN||ERXFCON_PMEN

	// do bank 2 stuff
	// enable MAC receive
	enc28j60Write(MACON1, MACON1_MARXEN|MACON1_TXPAUS|MACON1_RXPAUS);
	// bring MAC out of reset
	enc28j60Write(MACON2, 0x00);
	// enable automatic padding and CRC operations
	enc28j60WriteOp(ENC28J60_BIT_FIELD_SET, MACON3, MACON3_PADCFG0 | MACON3_TXCRCEN | MACON3_FRMLNEN);
	// enc28j60Write(MACON3, MACON3_PADCFG0|MACON3_TXCRCEN|MACON3_FRMLNEN);
	// set inter-frame gap (non-back-to-back)
	enc28j60Write(MAIPGL, 0x12);
	enc28j60Write(MAIPGH, 0x0C);//?
	// set inter-frame gap (back-to-back)
	enc28j60Write(MABBIPG, 0x12);
	// Set the maximum packet size which the controller will accept
	enc28j60Write16(MAMXFLL, ENC28J60_MAX_FRAMELEN);

	// do bank 3 stuff
	// write MAC address
	// NOTE: MAC address in ENC28J60 is byte-backward
	enc28j60Write(MAADR5, eth_addr[0]);
	enc28j60Write(MAADR4, eth_addr[1]);
	enc28j60Write(MAADR3, eth_addr[2]);
	enc28j60Write(MAADR2, eth_addr[3]);
	enc28j60Write(MAADR1, eth_addr[4]);
	enc28j60Write(MAADR0, eth_addr[5]);

	// no loopback of transmitted frames
	enc28j60PhyWrite(PHCON2, PHCON2_HDLDIS);
  
  // 0x476 is PHLCON LEDA=links status, LEDB=receive/transmit
  enc28j60PhyWrite(PHLCON,0x476);

	// switch to bank 0
	// enable interrutps
	enc28j60Write(EIE, EIE_INTIE|EIE_PKTIE);
	// enable packet reception
	enc28j60Write(ECON1, ECON1_RXEN);

	//enc28j60PhyWrite(PHLCON, 0x0AA2);

	// setup duplex ----------------------

	// Disable receive logic and abort any packets currently being transmitted
	enc28j60WriteOp(ENC28J60_BIT_FIELD_CLR, ECON1, ECON1_TXRTS|ECON1_RXEN);
  
	if(DuplexState)
	{
		u16_t temp;
		// Set the PHY to the proper duplex mode
		temp = enc28j60PhyRead(PHCON1);
		temp &= ~PHCON1_PDPXMD;
		enc28j60PhyWrite(PHCON1, temp);
		// Set the MAC to the proper duplex mode
		temp = enc28j60Read(MACON3);
		temp &= ~MACON3_FULDPX;
		enc28j60Write(MACON3, temp);
	}

	// Set the back-to-back inter-packet gap time to IEEE specified 
	// requirements.  The meaning of the MABBIPG value changes with the duplex
	// state, so it must be updated in this function.
	// In full duplex, 0x15 represents 9.6us; 0x12 is 9.6us in half duplex
	enc28j60Write(MABBIPG, DuplexState ? 0x15 : 0x12);	
	
	// Reenable receive logic
	enc28j60WriteOp(ENC28J60_BIT_FIELD_SET, ECON1, ECON1_RXEN);

	// setup duplex ----------------------
}
