==> alistair23/CSSE3010-QEMU-Examples/src/net/lwip/port/enc28j60/enc28j60_lowlevel.c <==
#include "arch/cc.h"
#include "lwipopts.h"
#include "enc28j60_lowlevel.h"
#include "enc28j60def.h"
#include "netduinoplus2.h"
#include "stm32f4xx_conf.h"
#include "debug_printf.h"
	#define ENC_SPI					NP2_SPI						//External SPI
	#define ENC_SPI_CLK				NP2_SPI_CLK
	#define ENC_SPI_SCK_GPIO_CLK	NP2_SPI_SCK_GPIO_CLK		//GPIO SPI SCK Clock
	#define ENC_SPI_MISO_GPIO_CLK	NP2_SPI_MISO_GPIO_CLK		//GPIO SPI MISO Clock
	#define ENC_SPI_CS_GPIO_CLK		NP2_D8_GPIO_CLK				//GPIO CS Clock
	#define ENC_SPI_SCK_PIN			NP2_SPI_SCK_PIN
	#define ENC_SPI_SCK_GPIO_PORT	NP2_SPI_SCK_GPIO_PORT
	#define ENC_SPI_SCK_SOURCE		NP2_SPI_SCK_SOURCE
	#define ENC_SPI_SCK_AF			NP2_SPI_SCK_AF
	#define ENC_SPI_MISO_PIN		NP2_SPI_MISO_PIN
  	#define ENC_SPI_MISO_GPIO_PORT	NP2_SPI_MISO_GPIO_PORT
	#define ENC_SPI_MISO_SOURCE		NP2_SPI_MISO_SOURCE
	#define ENC_SPI_MISO_AF			NP2_SPI_MISO_AF
	#define ENC_SPI_MOSI_PIN		NP2_SPI_MOSI_PIN
  	#define ENC_SPI_MOSI_GPIO_PORT	NP2_SPI_MOSI_GPIO_PORT
	#define ENC_SPI_MOSI_SOURCE		NP2_SPI_MOSI_SOURCE
	#define ENC_SPI_MOSI_AF			NP2_SPI_MOSI_AF
	#define ENC_SPI_CS_PIN			NP2_D8_PIN
  	#define ENC_SPI_CS_GPIO_PORT	NP2_D8_GPIO_PORT
	#define ENC_SPI					NP2_ENC_SPI						//onboard ethernet SPI
	#define ENC_SPI_CLK				NP2_ENC_SPI_CLK
	#define ENC_SPI_SCK_GPIO_CLK	NP2_ENC_SPI_SCK_GPIO_CLK		//GPIO SPI SCK Clock
	#define ENC_SPI_MISO_GPIO_CLK	NP2_ENC_SPI_MISO_GPIO_CLK		//GPIO SPI MISO Clock
	#define ENC_SPI_CS_GPIO_CLK		NP2_ENC_SPI_CS_GPIO_CLK				//GPIO CS Clock

u8_t enc_sendbyte(unsigned char txbyte) {

	u8_t rxbyte;

#ifdef DEBUG
	debug_printf("ENCSPI DEBUG: sendbyte: T-");
#endif		
	while (SPI_I2S_GetFlagStatus(ENC_SPI, SPI_I2S_FLAG_TXE) == RESET);

  	/* Send a Byte through the SPI peripheral */
  	SPI_I2S_SendData(ENC_SPI, txbyte);

	//DelayUs(10);  
	while (SPI_I2S_GetFlagStatus(ENC_SPI, SPI_I2S_FLAG_BSY) == SET);
	
	//DelayUs(10);
		// Wait for write to complete

  	/* Wait to receive a Byte */
  	while (SPI_I2S_GetFlagStatus(ENC_SPI, SPI_I2S_FLAG_RXNE) == RESET);
  
  	/* Return the Byte read from the SPI bus */
  	rxbyte = (u8_t)SPI_I2S_ReceiveData(ENC_SPI);

	DelayUs(100);
	DelayUs(300);
	DelayUs(100);
	
#ifdef DEBUG
	debug_printf("%X R-%X\n\r", txbyte, rxbyte);
#endif		

	return rxbyte;
}

void enc28j60Init(u8_t *eth_addr,u8_t DuplexState)
{
	// initialize I/O
	  
#ifdef DEBUG
	debug_printf("ENCSPI DEBUG: Enc28j60Init %2X-%2X-%2X-%2X-%2X-%2X \n\r", eth_addr[0], eth_addr[1], eth_addr[2], eth_addr[3], eth_addr[4], eth_addr[5]);
#endif
	
#ifdef EXT_ENC
  	RCC_APB1PeriphClockCmd(ENC_SPI_CLK, ENABLE);
#else
	RCC_APB2PeriphClockCmd(ENC_SPI_CLK, ENABLE);
#endif
	
  	/* Enable SCK, MOSI and MISO GPIO clocks */
	RCC_AHB1PeriphClockCmd(ENC_SPI_SCK_GPIO_CLK | ENC_SPI_CS_GPIO_CLK | ENC_SPI_MISO_GPIO_CLK, ENABLE);

	GPIO_PinAFConfig(ENC_SPI_SCK_GPIO_PORT, ENC_SPI_SCK_SOURCE, ENC_SPI_SCK_AF);
  	GPIO_PinAFConfig(ENC_SPI_MISO_GPIO_PORT, ENC_SPI_MISO_SOURCE, ENC_SPI_MISO_AF);
  	GPIO_PinAFConfig(ENC_SPI_MOSI_GPIO_PORT, ENC_SPI_MOSI_SOURCE, ENC_SPI_MOSI_AF);  

	/* SPI SCK pin configuration */
  	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
  	GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
  	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_100MHz;
	GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_DOWN;
  	GPIO_InitStructure.GPIO_Pin = ENC_SPI_SCK_PIN;	//NP2_ENC_SPI_SCK_PIN;
	GPIO_Init(ENC_SPI_SCK_GPIO_PORT, &GPIO_InitStructure);

  	/* SPI MISO pin configuration */
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
	GPIO_InitStructure.GPIO_Pin = ENC_SPI_MISO_PIN;	//NP2_ENC_SPI_MISO_PIN;
	GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_UP;
	GPIO_Init(ENC_SPI_MISO_GPIO_PORT, &GPIO_InitStructure);

	/* SPI  MOSI pin configuration */
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
	GPIO_InitStructure.GPIO_Pin =  ENC_SPI_MOSI_PIN;	//NP2_ENC_SPI_MOSI_PIN;
	GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_DOWN;
	GPIO_Init(ENC_SPI_MOSI_GPIO_PORT, &GPIO_InitStructure);

  	/* SPI configuration -------------------------------------------------------*/
  	SPI_I2S_DeInit(ENC_SPI);
  	SPI_InitStructure.SPI_Direction = SPI_Direction_2Lines_FullDuplex;
  	SPI_InitStructure.SPI_DataSize = SPI_DataSize_8b;
  	SPI_InitStructure.SPI_CPOL = SPI_CPOL_Low;
  	SPI_InitStructure.SPI_CPHA = SPI_CPHA_1Edge;
  	SPI_InitStructure.SPI_NSS = SPI_NSS_Soft; // | SPI_NSSInternalSoft_Set;
  	SPI_InitStructure.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_64;	//SPI_BaudRatePrescaler_64;
  	SPI_InitStructure.SPI_FirstBit = SPI_FirstBit_MSB;
  	SPI_InitStructure.SPI_CRCPolynomial = 0;
  	SPI_InitStructure.SPI_Mode = SPI_Mode_Master;
  	SPI_Init(ENC_SPI, &SPI_InitStructure);

  	/* Enable SPI for ENC */
  	SPI_Cmd(ENC_SPI, ENABLE);

  	/* Configure GPIO PIN for Enc Chip select */
  	GPIO_InitStructure.GPIO_Pin = ENC_SPI_CS_PIN;
  	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;
	GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_DOWN;
  	GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
  	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  	GPIO_Init(ENC_SPI_CS_GPIO_PORT, &GPIO_InitStructure);

  	/* Deselect : Chip Select high */
  	GPIO_SetBits(ENC_SPI_CS_GPIO_PORT, ENC_SPI_CS_PIN);
	
	/* Configure GPIO PIN for Power */
  	GPIO_InitStructure.GPIO_Pin = NP2_ENC_PWR_PIN;
  	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;
  	GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
	GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_UP;
  	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  	GPIO_Init(NP2_ENC_PWR_GPIO_PORT, &GPIO_InitStructure);
  	
	/* Turn Power off and on */	
	GPIO_ResetBits(NP2_ENC_PWR_GPIO_PORT, NP2_ENC_PWR_PIN);	

	/* Configure GPIO PIN for Reset */
  	GPIO_InitStructure.GPIO_Pin = NP2_ENC_RST_PIN;
  	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;
  	GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
	GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_UP;
  	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  	GPIO_Init(NP2_ENC_RST_GPIO_PORT, &GPIO_InitStructure);
  	
	/* Turn Reset on */	
	GPIO_SetBits(NP2_ENC_RST_GPIO_PORT, NP2_ENC_RST_PIN);
	
  	DelayUs(100);  	


  enc28j60SoftwareReset();
  
	// do bank 0 stuff
	// initialize receive buffer
	// 16-bit transfers, must write low byte first
	// set receive buffer start address
	NextPacketPtr = ENC28J60_RXSTART_INIT;
    
	enc28j60Write16(ERXSTL, ENC28J60_RXSTART_INIT);
	// set receive pointer address
	enc28j60Write16(ERXRDPTL, ENC28J60_RXSTART_INIT);
	// set receive buffer end
	enc28j60Write16(ERXNDL, ENC28J60_RXSTOP_INIT);
	// set transmit buffer start
	enc28j60Write16(ETXSTL, ENC28J60_TXSTART_INIT);
  
  // allow Unicast to US and Broad cast packets with correct CRC
  enc28j60Write(ERXFCON, ERXFCON_CRCEN|ERXFCON_UCEN|ERXFCON_BCEN);//ERXFCON_UCEN||ERXFCON_PMEN

	// do bank 2 stuff
	// enable MAC receive
	enc28j60Write(MACON1, MACON1_MARXEN|MACON1_TXPAUS|MACON1_RXPAUS);
	// bring MAC out of reset
	enc28j60Write(MACON2, 0x00);
	// enable automatic padding and CRC operations
	enc28j60WriteOp(ENC28J60_BIT_FIELD_SET, MACON3, MACON3_PADCFG0 | MACON3_TXCRCEN | MACON3_FRMLNEN);
	// enc28j60Write(MACON3, MACON3_PADCFG0|MACON3_TXCRCEN|MACON3_FRMLNEN);
	// set inter-frame gap (non-back-to-back)
	enc28j60Write(MAIPGL, 0x12);
	enc28j60Write(MAIPGH, 0x0C);//?
	// set inter-frame gap (back-to-back)
	enc28j60Write(MABBIPG, 0x12);
	// Set the maximum packet size which the controller will accept
	enc28j60Write16(MAMXFLL, ENC28J60_MAX_FRAMELEN);

	// do bank 3 stuff
	// write MAC address
	// NOTE: MAC address in ENC28J60 is byte-backward
	enc28j60Write(MAADR5, eth_addr[0]);
	enc28j60Write(MAADR4, eth_addr[1]);
	enc28j60Write(MAADR3, eth_addr[2]);
	enc28j60Write(MAADR2, eth_addr[3]);
	enc28j60Write(MAADR1, eth_addr[4]);
	enc28j60Write(MAADR0, eth_addr[5]);

	// no loopback of transmitted frames
	enc28j60PhyWrite(PHCON2, PHCON2_HDLDIS);
  
  // 0x476 is PHLCON LEDA=links status, LEDB=receive/transmit
  enc28j60PhyWrite(PHLCON,0x476);

	// switch to bank 0
	// enable interrutps
	enc28j60Write(EIE, EIE_INTIE|EIE_PKTIE);
	// enable packet reception
	enc28j60Write(ECON1, ECON1_RXEN);

	//enc28j60PhyWrite(PHLCON, 0x0AA2);

	// setup duplex ----------------------

	// Disable receive logic and abort any packets currently being transmitted
	enc28j60WriteOp(ENC28J60_BIT_FIELD_CLR, ECON1, ECON1_TXRTS|ECON1_RXEN);
  
	if(DuplexState)
	{
		u16_t temp;
		// Set the PHY to the proper duplex mode
		temp = enc28j60PhyRead(PHCON1);
		temp &= ~PHCON1_PDPXMD;
		enc28j60PhyWrite(PHCON1, temp);
		// Set the MAC to the proper duplex mode
		temp = enc28j60Read(MACON3);
		temp &= ~MACON3_FULDPX;
		enc28j60Write(MACON3, temp);
	}

	// Set the back-to-back inter-packet gap time to IEEE specified 
	// requirements.  The meaning of the MABBIPG value changes with the duplex
	// state, so it must be updated in this function.
	// In full duplex, 0x15 represents 9.6us; 0x12 is 9.6us in half duplex
	enc28j60Write(MABBIPG, DuplexState ? 0x15 : 0x12);	
	
	// Reenable receive logic
	enc28j60WriteOp(ENC28J60_BIT_FIELD_SET, ECON1, ECON1_RXEN);

	// setup duplex ----------------------
}
